# decofre

./: .gitignore  LICENCE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
datasets/: README.md
datasets/ancor/: ancor.json  ancor.py  ancor_clusters.py  ancor_spangen.py
datasets/ancor/model_configs/: 2019-07-04-larger-hidden.jsonnet  2019-08-14-stringmatch.jsonnet  2019-08-18-larger_hidden-huge_drop.jsonnet  2019-09-02-larger-hidrop-external.jsonnet  2019-10-21-pos.jsonnet  2019-10-30-str+pos.jsonnet  2020-02-02-NER.jsonnet  2020-02-02-chunk.jsonnet  2020-02-17-lemma.jsonnet  default.jsonnet
datasets/ancor/model_configs/ablations/: 2019-12-12-nolength.jsonnet  README.md
datasets/ancor/model_configs/berts/: 2019-11-10-bert-multiling+finetune.jsonnet  2019-11-10-bert-multiling.jsonnet  2019-11-12-bert-multiling-combine4+proj.jsonnet  (+9 more)
datasets/ancor/train_configs/: 2019-01-29-sane.jsonnet  2019-04-12-nowd.jsonnet  2019-07-08-quasisim.jsonnet  2019-07-09-boost2.jsonnet  2019-07-09-noboost.jsonnet  2019-07-10-quasisim-noboost.jsonnet  2019-07-30-oscar.jsonnet  2019-08-09-diffquasisim-noboost.jsonnet  2019-08-14-lodiff_quasisim.jsonnet  2019-08-18-noboost-wd.jsonnet  2019-09-10-cstlr.jsonnet  2019-09-11-smollr.jsonnet  2019-09-13-highlr.jsonnet  2019-09-19-nodet.jsonnet  2019-12-12-nopretrainded_embeddings.jsonnet
datasets/democrat/: democrat.py  democrat_clusters.py  democrat_spangen.py
datasets/democrat/model_configs/: 2019-07-05-larger_hidden-high_drop.jsonnet  2020-11-12-larger_hidden-lodrop.jsonnet  2020-11-14-larger_coref-alllodrop.jsonnet  2021-01-13-EVERYTHING.jsonnet
datasets/democrat/train_configs/: 2020-08-18-onlycor-lrd-anaphoricity.jsonnet  2020-08-18-phd_base.jsonnet  2020-08-18-phd_onlycor.jsonnet  2020-11-13-onlycor-3e5lr  2020-12-09-decayinglr-ana.jsonnet  2020-12-09-decayinglr.jsonnet
decofre/: clusterize.py  datatools.py  detmentions.py  eval.py  infer.py  lexicon.py  libdecofre.py  main.py  optimizers.py  runners.py  score.py  utils.py  visualize.py
decofre/formats/: __init__.py  avp.py  raw_text.py
decofre/models/: __init__.py  config.py  default.jsonnet  defaults.py  encoders.py  utils.py
decofre/tasks/: antecedent_scoring.py  mention_detection.py
decofre/training/: quasisimultaneous.py  sequential.py
tests/: datatools_speedtest.py  sanity-check-coref.jsonnet  sanity-check.jsonnet  sanity-check_quasisim.jsonnet  test.jsonnet  test_antecedent_scoring.py  test_libdecofre.py  test_models.py  test_utils.py
tests/fixtures/: antecedents.json  mentions.json  pretrained_embeddings.word2vec  raw_text.txt
(+131 files in other folders)
