[metadata]
name = decofre
version = 0.5.0.dev0
description = Neural coreference detection.
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Environment :: Console
keywords =
    nlp
    coreference
    neural network

[options]
packages = find:
include_package_data=True
python_requires = >=3.8
install_requires =
    2to3
    allennlp > 0.9.0, < 1.0.0
    beautifulsoup4
    boltons
    docopt-ng >= 0.7
    doit
    fouine
    GitPython
    jsonnet
    lmdb
    loguru
    lxml
    networkx
    numpy
    orjson
    pytorch-ignite <= 0.2.1
    requests
    schema
    scorch
    spacy
    tensorboardx
    torch >= 1.3.0
    tqdm >= 4.40.0
    transformers >= 2.4.1, < 2.5.0
    typing_extensions >= 3.7.4
    ujson


[options.entry_points]
console_scripts =
    decofre-train = decofre.main:main_entry_point
    decofre-infer = decofre.infer:main_entry_point

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True
warn_unreachable = True
